--- a/block-BNaabo/sample/index.html
+++ b/block-BNaabo/sample/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>this is the express assignment</title>
-   <link rel="stylesheet" href="./publick/style.css">
+   <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
     <div class="container flex">
         <h1>this is the photos of venkataravindra pv</h1>
-      <img src="./publick/img4.jpg" alt="img4" />
-      <img src="./publick/img3.jpg" alt="" />
-      <img src="./publick/img2.jpg" alt="" />
-      <img src="./publick/img1.jpg" alt="" />
+      <img src="./img1.jpg" alt="img4" />
+      <img src="./img2.jpg" alt="" />
+      <img src="./img3.jpg" alt="" />
+      <img src="./img4.jpg" alt="" />
       <article>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
