--- a/block-BNaabs/sample/form.html
+++ b/block-BNaabs/sample/form.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div>
-        <form action="submit">
+        <form action="/new" method="post">
             <input type="text" placeholder="enter your name" id="name">
             <input type="password" placeholder="enter your password" id="pasword">
-            <input type="password" placeholder="enter again">
+            <input type="password" placeholder="enter again"><br>
+            <input type="email" placeholder="enter your gmail">
             <input type="file" placeholder="chose a file">
-            <input type="button">
-            <input type="submit">
+            <input type="submit" value="add user">
         </form>
     </div>
 </body>
