--- a/block-BNaabv/sample/index.html
+++ b/block-BNaabv/sample/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>user data</title>
 </head>
 <body>
-    <h2>'Welcome to express'</h2>
+    <form action="/new" method="POST">
+        <input type="text" placeholder="enter youer name">
+        <input type="number" placeholder="enter your age">
+        <input type="email" placeholder="enter gmail">
+        <input type="submit" value="add user">
+    </form>
 </body>
 </html>
