--- a/block-BNaabw/sample/index.html
+++ b/block-BNaabw/sample/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./public/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>this is the images of ravindra</h1>
     <section class="container">
       <div class="flex">
         <div>
-          <img src="./public/images/img1.jpg" alt="all" />
+          <img src="./images/img1.jpg" alt="all" />
         </div>
         <article>
           <p>
@@ -45,12 +45,12 @@
             </p>
         </article>
         <div>
-          <img src="./public/images/img2.jpg" alt="all" />
+          <img src="./images/img2.jpg" alt="all" />
         </div>
       </div>
       <div class="flex">
         <div>
-          <img src="./public/images/img3.jpg" alt="all" />
+          <img src="./images/img3.jpg" alt="all" />
         </div>
         <article>
           <p>
@@ -85,12 +85,12 @@
           </p>
         </article>
         <div>
-          <img src="./public/images/img4.jpg" alt="all" />
+          <img src="./images/img4.jpg" alt="all" />
         </div>
       </div>
       <div class="flex">
         <div>
-          <img src="./public/images/img5.jpg" alt="all" />
+          <img src="./images/img5.jpg" alt="all" />
         </div>
         <article>
           <p>
@@ -122,7 +122,7 @@
           </p>
         </article>
         <div>
-          <img src="./public/images/img6.jpg" alt="all" />
+          <img src="./images/img6.jpg" alt="all" />
         </div>
       </div>
     </section>
